switched namespace to prevent misunderstandings

--- a/frontend-maven-plugin/pom.xml
+++ b/frontend-maven-plugin/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>frontend-plugins</artifactId>
-    <groupId>com.github.eirslett</groupId>
+    <groupId>de.jacksitlab</groupId>
     <version>1.7.1</version>
   </parent>
 
@@ -24,7 +24,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.github.eirslett</groupId>
+      <groupId>de.jacksitlab</groupId>
       <artifactId>frontend-plugin-core</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
