--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <version>7</version>
     </parent>
 
-    <groupId>com.github.eirslett</groupId>
+    <groupId>de.jacksitlab</groupId>
     <artifactId>frontend-plugins</artifactId>
     <version>1.7.1</version>
     <packaging>pom</packaging>
@@ -24,7 +24,7 @@
         run Grunt tasks, and/or run Karma tests.
     </description>
 
-    <url>https://github.com/eirslett/frontend-maven-plugin</url>
+    <url>https://github.com/jacksitlab/frontend-maven-plugin</url>
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
