--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -7,7 +8,7 @@
         <version>7</version>
     </parent>
 
-    <groupId>de.jacksitlab</groupId>
+    <groupId>de.jacks-it-lab</groupId>
     <artifactId>frontend-plugins</artifactId>
     <version>1.7.1</version>
     <packaging>pom</packaging>
@@ -34,16 +35,16 @@
     </licenses>
 
     <scm>
-        <url>https://github.com/eirslett/frontend-maven-plugin</url>
-        <connection>scm:git:https://github.com/eirslett/frontend-maven-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:eirslett/frontend-maven-plugin.git</developerConnection>
+        <url>https://github.com/jacksitlab/frontend-maven-plugin</url>
+        <connection>scm:git:https://github.com/jacksitlab/frontend-maven-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:jacksitlab/frontend-maven-plugin.git</developerConnection>
     </scm>
 
     <developers>
         <developer>
-            <id>eirslett</id>
-            <name>Eirik Sletteberg</name>
-            <email>eiriksletteberg@gmail.com</email>
+            <id>jacksitlab</id>
+            <name>Jack</name>
+            <email>jack@jacks-it-lab.de</email>
         </developer>
     </developers>
 
@@ -67,4 +68,10 @@
             </plugins>
         </pluginManagement>
     </build>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>sonatype-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
