--- a/frontend-plugin-core/pom.xml
+++ b/frontend-plugin-core/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>frontend-plugins</artifactId>
         <groupId>de.jacks-it-lab</groupId>
-        <version>1.7.1</version>
+        <version>1.7.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
