--- a/frontend-maven-plugin/pom.xml
+++ b/frontend-maven-plugin/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>frontend-plugins</artifactId>
     <groupId>de.jacks-it-lab</groupId>
-    <version>1.7.2-SNAPSHOT</version>
+    <version>1.7.2</version>
   </parent>
 
   <artifactId>frontend-maven-plugin</artifactId>
